# synarion-engine

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  Makefile  README.md  VISION.md  rustfmt.toml
.github/workflows/: ci.yml
docs/: book.toml
docs/research/: README.md  creation-tools.md  ecosystem-fauna.md  gpu-terrain-shaders.md  planetary-rendering.md  planetary-simulation.md  resource-system.md  terrain-generation.md  world-graph.md
docs/src/: SUMMARY.md  introduction.md
docs/src/api/: syn_collections.md  syn_core.md  syn_ecs.md  syn_math.md  syn_renderer.md  syn_vulkan.md
docs/src/architecture/: editor-crates.md  engine-crates.md  overview.md  tools-crates.md
docs/src/contributing/: architecture-decisions.md  code-style.md  commit-conventions.md  how-to-contribute.md
docs/src/getting-started/: first-project.md  hello-triangle.md  installation.md
docs/src/roadmap/: milestones.md  status.md
docs/src/tutorials/: audio.md  ecs.md  materials.md  networking.md  physics.md  rendering.md  shaders.md  vulkan-basics.md
editor/crates/syn_animation_editor/: Cargo.toml
editor/crates/syn_animation_editor/src/: lib.rs
editor/crates/syn_asset_browser/: Cargo.toml
editor/crates/syn_asset_browser/src/: lib.rs
editor/crates/syn_blueprint_editor/: Cargo.toml
editor/crates/syn_blueprint_editor/src/: lib.rs
editor/crates/syn_console/: Cargo.toml
editor/crates/syn_console/src/: lib.rs
editor/crates/syn_dialogue_editor/: Cargo.toml
editor/crates/syn_dialogue_editor/src/: lib.rs
editor/crates/syn_editor_core/: Cargo.toml
editor/crates/syn_editor_core/src/: lib.rs
editor/crates/syn_editor_ui/: Cargo.toml
editor/crates/syn_editor_ui/src/: lib.rs
editor/crates/syn_editor_widgets/: Cargo.toml
editor/crates/syn_editor_widgets/src/: lib.rs
editor/crates/syn_hierarchy/: Cargo.toml
editor/crates/syn_hierarchy/src/: lib.rs
editor/crates/syn_inspector/: Cargo.toml
editor/crates/syn_inspector/src/: lib.rs
editor/crates/syn_material_editor/: Cargo.toml
editor/crates/syn_material_editor/src/: lib.rs
editor/crates/syn_particle_editor/: Cargo.toml
editor/crates/syn_particle_editor/src/: lib.rs
editor/crates/syn_prefab_editor/: Cargo.toml
editor/crates/syn_prefab_editor/src/: lib.rs
editor/crates/syn_profiler/: Cargo.toml
editor/crates/syn_profiler/src/: lib.rs
editor/crates/syn_quest_editor/: Cargo.toml
editor/crates/syn_quest_editor/src/: lib.rs
editor/crates/syn_team_sync/: Cargo.toml
editor/crates/syn_team_sync/src/: lib.rs
editor/crates/syn_terrain_editor/: Cargo.toml
editor/crates/syn_terrain_editor/src/: lib.rs
editor/crates/syn_version_control/: Cargo.toml
editor/crates/syn_version_control/src/: lib.rs
editor/crates/syn_viewport/: Cargo.toml
editor/crates/syn_viewport/src/: lib.rs
editor/crates/synarion_editor/: Cargo.toml
editor/crates/synarion_editor/src/: lib.rs  main.rs
engine/crates/syn_ai/: Cargo.toml
engine/crates/syn_ai/src/: lib.rs
engine/crates/syn_animation/: Cargo.toml
engine/crates/syn_animation/src/: lib.rs
engine/crates/syn_app/: Cargo.toml
engine/crates/syn_app/src/: lib.rs
engine/crates/syn_assets/: Cargo.toml
engine/crates/syn_assets/src/: lib.rs
engine/crates/syn_audio/: Cargo.toml
engine/crates/syn_audio/src/: lib.rs
engine/crates/syn_collections/: Cargo.toml
engine/crates/syn_collections/src/: arena.rs  lib.rs  slot_map.rs  sparse_set.rs
engine/crates/syn_core/: Cargo.toml
engine/crates/syn_core/src/: error.rs  handle.rs  id.rs  lib.rs  pool.rs  traits.rs
engine/crates/syn_dialogue/: Cargo.toml
engine/crates/syn_dialogue/src/: lib.rs
engine/crates/syn_ecs/: Cargo.toml
engine/crates/syn_ecs/src/: lib.rs
engine/crates/syn_filesystem/: Cargo.toml
engine/crates/syn_filesystem/src/: lib.rs
engine/crates/syn_gpu/: Cargo.toml
engine/crates/syn_gpu/src/: lib.rs
engine/crates/syn_input/: Cargo.toml
engine/crates/syn_input/src/: action.rs  gamepad.rs  keyboard.rs  lib.rs  mouse.rs
engine/crates/syn_inventory/: Cargo.toml
engine/crates/syn_inventory/src/: lib.rs
engine/crates/syn_lua/: Cargo.toml
engine/crates/syn_lua/src/: lib.rs
engine/crates/syn_math/: Cargo.toml
engine/crates/syn_memory/: Cargo.toml
engine/crates/syn_navigation/: Cargo.toml
engine/crates/syn_net_client/: Cargo.toml
engine/crates/syn_net_core/: Cargo.toml
engine/crates/syn_net_server/: Cargo.toml
engine/crates/syn_particles/: Cargo.toml
engine/crates/syn_physics/: Cargo.toml
engine/crates/syn_platform/: Cargo.toml
engine/crates/syn_procgen/: Cargo.toml
engine/crates/syn_quests/: Cargo.toml
engine/crates/syn_renderer/: Cargo.toml
engine/crates/syn_replication/: Cargo.toml
engine/crates/syn_scene/: Cargo.toml
engine/crates/syn_scripting/: Cargo.toml
engine/crates/syn_shaders/: Cargo.toml
engine/crates/syn_streaming/: Cargo.toml
engine/crates/syn_tasks/: Cargo.toml
engine/crates/syn_terrain/: Cargo.toml
engine/crates/syn_ui/: Cargo.toml
engine/crates/syn_ui_core/: Cargo.toml
engine/crates/syn_ui_widgets/: Cargo.toml
engine/crates/syn_vegetation/: Cargo.toml
engine/crates/syn_vulkan/: Cargo.toml
engine/crates/synarion_runtime/: Cargo.toml
examples/00_hello_triangle/: Cargo.toml
examples/01_textured_cube/: Cargo.toml
examples/02_pbr_materials/: Cargo.toml
examples/02_pbr_materials/src/: main.rs
examples/03_skeletal_animation/: Cargo.toml
examples/04_physics_playground/: Cargo.toml
examples/05_multiplayer_demo/: Cargo.toml
examples/06_procedural_terrain/: Cargo.toml
examples/07_complete_game/: Cargo.toml
tools/crates/syn_asset_compiler/: Cargo.toml
tools/crates/syn_audio_processor/: Cargo.toml
tools/crates/syn_cli/: Cargo.toml
tools/crates/syn_import_blend/: Cargo.toml
tools/crates/syn_import_fbx/: Cargo.toml
tools/crates/syn_import_gltf/: Cargo.toml
tools/crates/syn_localization/: Cargo.toml
tools/crates/syn_mesh_processor/: Cargo.toml
tools/crates/syn_packager/: Cargo.toml
tools/crates/syn_shader_compiler/: Cargo.toml
tools/crates/syn_texture_processor/: Cargo.toml
(+49 files in other folders)
