[package]
name = "example_hello_triangle"
description = "Hello Triangle - First Vulkan triangle"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "hello_triangle"
path = "src/main.rs"

[dependencies]
synarion_runtime.workspace = true
log.workspace = true
env_logger.workspace = true
