[package]
name = "example_physics_playground"
description = "Physics Playground - Basic physics demo"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "physics_playground"
path = "src/main.rs"

[dependencies]
synarion_runtime.workspace = true
log.workspace = true
env_logger.workspace = true
