[package]
name = "example_complete_game"
description = "Complete Game - Full featured demo"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "complete_game"
path = "src/main.rs"

[dependencies]
synarion_runtime.workspace = true
log.workspace = true
env_logger.workspace = true
